--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -80,7 +80,7 @@ html {
   color: #fff;
   padding-top: 10;
   font-family: "Abril Fatface", serif;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 
 /* Sidebar nav */
@@ -107,6 +107,7 @@ a.sidebar-nav-item:focus {
 
 @media (min-width: 48em) {
   .sidebar-sticky {
+    position: absolute;
     right:  1rem;
     bottom: 1rem;
     left:   1rem;
