--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,7 +17,7 @@
           <a class="sidebar-nav-item" href="#{{ node.title }}">{{ node.number }}. {{ node.title }}</a>
         {% endif %}
       {% endfor %}
-      <a class="sidebar-nav-item" href="#Conclusion">4. Conclusion</a>
+      <a class="sidebar-nav-item" href="#Crime Types">4. Crime Type Analysis</a>
 
       <div style="padding-top: 1em;"></div>
 
