--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -69,6 +69,21 @@ html {
   }
 }
 
+@media (min-width: 78em) {
+  html {
+    font-size: 20px;
+  }
+  .sidebar-about h1 {
+    font-size: 2.0em;
+  }
+  .lead {
+    font-size: 1.5rem;
+  }
+  .sidebar-nav-item{
+    font-size: 1.5rem;
+  }
+}
+
 
 /*
  * Sidebar
