fixed about bug

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -22,7 +22,7 @@
       <div style="padding-top: 1em;"></div>
 
       
-      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="{{ site.baseurl }}">Home</a>
+      <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="https://eddyvmgit.github.io/">Home</a>
 
       <a href=""></a>
       {% assign pages_list = site.pages %}
